deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  labels:
    app: hello
spec:
  replicas: 5
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello-openshift
        image: image-registry.openshift-image-registry.svc:5000/nbrown/hello-openshift
        ports:
        - name: web
          containerPort: 8090
          protocol: TCP
