pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: hello
  labels:
    app: hello
spec:
  containers:
  - name: hello-openshift
    image: image-registry.openshift-image-registry.svc:5000/nbrown/hello-openshift
    ports:
    - name: web
      containerPort: 8090
      protocol: TCP
