route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello
  name: hello
spec:
  port:
    targetPort: web
  to:
    kind: Service
    name: hello
    weight: 100
  tls:
    termination:
  wildcardPolicy: None
